--- a/src/index.css
+++ b/src/index.css
@@ -21,18 +21,17 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  cursor: pointer;
+	color: white;
+	background-color: #007bff;
+	padding: 10px 26px;
+  border: none;
+  border-radius: 4px;
+	border: 1px solid transparent;
+	cursor: pointer;
   transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
 }
 
 button:focus,
@@ -42,7 +41,6 @@ button:focus-visible {
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
 }
 
