--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -3,16 +3,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+	row-gap: 85px;
   height: 100vh;
   background-color: #f0f0f0;
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+.login-title{
+	margin-top: -30px;
+	color: #007bff;
 }
 
 .login-form {
   display: flex;
   flex-direction: column;
   width: 300px;
-  padding: 20px;
+  padding: 20px 25px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -34,20 +39,12 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	row-gap: 10px;
 }
 .btn-login-send{
 	width: 100%;
 }
 
-.login-form button {
-  padding: 10px;
-  margin-top: 10px;
-  border: none;
-  border-radius: 4px;
-  background-color: #007bff;
-  color: white;
-  cursor: pointer;
-}
 
 .login-form button:hover {
   background-color: #0056b3;
