--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,12 +1,9 @@
 .sidebar {
   width: 250px;
+	height: calc(100vh - 165px);
   background-color: #f4f4f4;
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
   display: flex;
   flex-direction: column;
 }
