--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,12 @@ button:focus-visible {
 a {
   font-weight: 500;
   text-decoration: inherit;
+	cursor: pointer;
 }
 
 a:hover {
   color: #535bf2;
+}
+ul{
+	list-style: none;
 }
