--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 250px;
+  width: 110px;
 	height: calc(100vh - 165px);
   background-color: #f4f4f4;
   padding: 20px;
@@ -13,19 +13,10 @@
   margin-bottom: 20px;
 }
 
-.menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+.sidebar-menu{
+	height: 70%;
+	display: flex;
+	flex-direction: column;
+	row-gap: 10px;
 }
 
-.menuItem {
-  margin: 10px 0;
-  padding: 10px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.menuItem:hover {
-  background-color: #ddd;
-}
