--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+button:hover{
+	background-color: #0469d4;
+}
+
 a {
   font-weight: 500;
   text-decoration: inherit;
