--- a/src/components/StudentList/StudentList.css
+++ b/src/components/StudentList/StudentList.css
@@ -1,10 +1,11 @@
 .student-list-container {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 0 auto; /* Centraliza o conteúdo */
   padding: 20px;
   background-color: #f5f5f5;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: relative; /* Para posicionar o botão dentro deste contêiner */
 }
 
 h2 {
@@ -18,6 +19,11 @@ h2 {
   margin: 20px auto;
 }
 
+.right-button {
+  position: absolute; /* Posiciona o botão em relação ao contêiner */
+  right: 20px; /* Distância do lado direito */
+  top: 20px; /* Distância do topo */
+}
 
 .student-table {
   width: 100%;
@@ -58,4 +64,36 @@ h2 {
   text-align: center;
   font-weight: bold;
   margin-top: 20px;
+}
+
+.action-column {
+  text-align: center;
+}
+
+.action-button {
+  padding: 8px 12px;
+  margin: 0 5px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 0.9em;
+  transition: background-color 0.3s ease;
+}
+
+.action-button--edit {
+  background-color: #4caf50; /* Verde */
+  color: white;
+}
+
+.action-button--edit:hover {
+  background-color: #45a049;
+}
+
+.action-button--delete {
+  background-color: #f44336; /* Vermelho */
+  color: white;
+}
+
+.action-button--delete:hover {
+  background-color: #e53935;
 }
