--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,33 @@
-.App {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
 .header {
-  flex-shrink: 0;
-}
-
-.main-content {
+  width: 100%; /* O Header ocupa 100% da largura */
+  height: 165px; /* Altura do Header */
   display: flex;
-  flex-grow: 1;
-  height: calc(100% - 60px); /* Altura do header e do footer subtraída */
+  justify-content: space-between; /* Alinha o logo e as informações do usuário */
+  align-items: center; /* Alinha verticalmente os itens no centro */
+  padding: 10px 20px; /* Adiciona padding para evitar que o texto fique colado nas bordas */
+  background-color: #4A90E2; /* Cor de fundo do Header */
+  position: fixed; /* Fixa o Header no topo */
+  top: 0; /* Fixa no topo */
+  left: 0; /* Fixa à esquerda */
+  z-index: 1000; /* Garante que o Header fique acima de outros elementos */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra para destacar o Header */
+  color: white; /* Cor do texto */
 }
 
-.sidebar {
-  width: 250px;
-  background-color: #f4f4f4;
-  flex-shrink: 0;
-  padding: 20px;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+.header-logo {
+  font-size: 32px; /* Tamanho da fonte do logo */
+  font-weight: bold; /* Negrito */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); /* Sombra do texto */
 }
 
-main {
-  flex-grow: 1;
-  padding: 20px;
-  background-color: #fff;
+.header-user {
+  display: flex;
+  flex-direction: column; /* Organiza informações do usuário verticalmente */
+  align-items: flex-end; /* Alinha as informações à direita */
 }
 
-.footer {
-  flex-shrink: 0;
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 10px 0;
+.header-user p {
+  margin: 5px 0;
+  font-size: 16px; /* Tamanho da fonte da mensagem de boas-vindas */
+  color: #ffffff; /* Cor do texto */
 }
