--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+* {
+  box-sizing: border-box; /* Garante que o padding e a borda sejam incluídos na largura e altura total */
+}
+
 body {
   font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
   margin: 0;
@@ -24,13 +28,13 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-	color: white;
-	background-color: #007bff;
-	padding: 10px 26px;
+  color: white;
+  background-color: #007bff;
+  padding: 10px 26px;
   border: none;
   border-radius: 4px;
-	border: 1px solid transparent;
-	cursor: pointer;
+  border: 1px solid transparent;
+  cursor: pointer;
   transition: border-color 0.25s;
 }
 
@@ -39,19 +43,20 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-button:hover{
-	background-color: #0469d4;
+button:hover {
+  background-color: #0469d4;
 }
 
 a {
   font-weight: 500;
   text-decoration: inherit;
-	cursor: pointer;
+  cursor: pointer;
 }
 
 a:hover {
   color: #535bf2;
 }
-ul{
-	list-style: none;
+
+ul {
+  list-style: none;
 }
