--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,12 +1,11 @@
 .sidebar {
   width: 200px;
-  height: calc(100vh - 165px);
+  height: 100%;
   background-color: #f4f4f4;
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-
 }
 
 .sidebar-title {
