--- a/src/pages/Dashboard/Coordenador/Dashboard.css
+++ b/src/pages/Dashboard/Coordenador/Dashboard.css
@@ -1,6 +1,8 @@
 .dashboardCoordinator{
 	width: 100%;
 	height: 100%;
+	margin-top: 165px;
+
 	display: flex;
 	flex-direction: column;
 
@@ -8,7 +10,9 @@
 
 .dashboardWrapper{
 	display: flex;
+
 }
+
 
 .dashboardContent{
 	width: 100%;
